[metadata]
name = robotframework-library-example
version = 0.1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = wagnerd
author_email = mail@wagnerd.de
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    =src
packages = find:
install_requires = 
    robotframework-pythonlibcore
    robotframework
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    utest*
